...
  Widget build(BuildContext context) {
    final highlightColor = JiveTheme.primaryGreen;

    return Scaffold(
      backgroundColor: Colors.grey.shade100,
      appBar: AppBar(
        title: const Text("选择图标", style: TextStyle(fontWeight: FontWeight.w600)),
        backgroundColor: Colors.grey.shade100,
        elevation: 0,
        actions: [
          TextButton(
            onPressed: () => Navigator.pop(context, _selectedIcon),
            child: const Text("确定"),
          ),
        ],
      ),
      body: Column(
        children: [
          Padding(
...
