...
  'shopping_cart': Icons.shopping_cart,
  'directions_car': Icons.directions_car,
  'flight': Icons.flight,
  'medical_services': Icons.medical_services,
  'school': Icons.school,
  'sports': Icons.sports_soccer,
  'movie': Icons.movie,
  'flag': Icons.flag,
  'person': Icons.person,
  'lifestyle': Icons.spa,
  'travel': Icons.explore,
  'education': Icons.menu_book,
  'health': Icons.favorite,
...
